fixed problem with projects title getting cut off

--- a/css/main.css
+++ b/css/main.css
@@ -2419,7 +2419,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .project-area {
   background-color: #f9f9ff;
+  margin-bottom: 200px;
 }
+
 
 .single-project a {
   color: #000;
